tests/Tests.Unit.Application/Errors/DuplicateEntityCreationTests/Ctor.cs
namespace Tests.Unit.Application.Errors.DuplicateEntityCreationTests;

public class Ctor
{
    [Fact(Skip = "Not implemented")]
    public void Ctor_Instantiated_ArgsAreMappedCorrectly()
    {
        // arrange

        // assert

        // act
        Assert.True(true);
    }
}